# arx

./: .clang-format  README.md  arm_controlout.txt
arm_control/: CMakeLists.txt  package.xml  test_transform_pub.py
arm_control/cfg/: reconfig.cfg
arm_control/include/: utility.h
arm_control/include/App/: arm_control.h
arm_control/include/Hardware/: can.h  math_ops.h  motor.h  teleop.h
arm_control/include/libcan/: CANAdapter.h  CANFrame.h  CANFrameParser.h  SocketCAN.h
arm_control/launch/: arx5v.launch
arm_control/msg/: Imu.msg  Motor.msg  armTorque.msg
arm_control/shell/: setup_can.sh
arm_control/src/: arx_5v.cpp  utility.cpp
arm_control/src/App/: arm_control.cpp
arm_control/src/Hardware/: can.cpp  math_ops.cpp  motor.cpp
arm_control/src/libcan/: CANAdapter.cpp  SocketCAN.cpp
lion_msg/: CMakeLists.txt  package.xml
lion_msg/msg/: armTraj.msg  baseTraj.msg  knotPoints.msg
ultron/: CMakeLists.txt  README.md  package.xml
ultron/config/: ultron_position_control.yaml
ultron/include/: demonstrator.hpp
ultron/launch/: display.launch  gazebo.launch  ultron_position_control.launch  ultron_torque_control.launch
ultron/meshes/: base_link.STL
ultron/src/: demonstrate_mode.cpp  demonstrator.cpp  hand_controller.cpp  main.cpp  main_impedence.cpp  main_position.cpp  main_traj.cpp  pos_impedence.cpp  zero_pos.cpp
ultron/urdf/: ultron.csv  ultron.urdf  ultron3.urdf  ultron_torque.urdf
ultron_pos/: CMakeLists.txt  package.xml
ultron_pos/config/: ultron_torque_control.yaml
ultron_pos/include/: HermiteSpline.hpp  communicator.hpp  interpolation.hpp  inverseKinematics.hpp  robotPinocchioModel.hpp  trajectoryLoader.hpp  trapezoidalSlerp.hpp  typeAlias.hpp
ultron_pos/launch/: config.rviz  display.launch  gazebo.launch  ultron_gazebo.launch
ultron_pos/meshes/: link4.STL  link5.STL  link6.STL
ultron_pos/mujoco/: ultron_sim.py
ultron_pos/src/: HermiteSpline.cpp  communicator.cpp  inverseKinematics.cpp  main.cpp  robotPinocchioModel.cpp  test.cpp  trajectoryLoader.cpp
ultron_pos/test/: drawSpline.cpp  testHermiteSpline.cpp
ultron_pos/urdf/: ultron.urdf  ultron.xml
ultron_test/: CMakeLists.txt  package.xml
ultron_test/config/: ultron_position_control.yaml
ultron_test/launch/: display.launch  gazebo.launch  real_arm.launch  ultron_position_control.launch  ultron_torque_control.launch
ultron_test/meshes/: link1.STL  link3.STL
ultron_test/src/: demonstrate_mode.cpp  demonstrator.cpp  pos_impedence.cpp
ultron_test/urdf/: ultron.urdf  ultron.xacro
